
set( ER7_UTILS_SRC
  integration/abm4/src/abm4_first_order_ode_integrator
  integration/abm4/src/abm4_integrator_constructor
  integration/abm4/src/abm4_second_order_ode_integrator
  integration/beeman/src/beeman_integrator_constructor
  integration/beeman/src/beeman_second_order_ode_integrator
  integration/core/src/base_integration_group
  integration/core/src/bogus_integration_controls
  integration/core/src/first_order_ode_integrator
  integration/core/src/integration_controls
  integration/core/src/integration_messages
  integration/core/src/integrator_constructor
  integration/core/src/integrator_constructor_factory
  integration/core/src/integrator_result_merger
  integration/core/src/integrator_result_merger_container
  integration/core/src/left_quaternion_functions
  integration/core/src/priming_first_order_ode_integrator
  integration/core/src/priming_integration_controls
  integration/core/src/priming_integrator_constructor
  integration/core/src/priming_second_order_ode_integrator
  integration/core/src/second_order_ode_integrator
  integration/core/src/single_cycle_integration_controls
  integration/core/src/standard_integration_controls
  integration/euler/src/euler_first_order_ode_integrator
  integration/euler/src/euler_integrator_constructor
  integration/euler/src/euler_second_order_ode_integrator
  integration/mm4/src/mm4_integrator_constructor
  integration/mm4/src/mm4_second_order_ode_integrator
  integration/nl2/src/nl2_integrator_constructor
  integration/nl2/src/nl2_second_order_ode_integrator
  integration/position_verlet/src/position_verlet_integrator_constructor
  integration/position_verlet/src/position_verlet_second_order_ode_integrator
  integration/rk2_heun/src/rk2_heun_first_order_ode_integrator
  integration/rk2_heun/src/rk2_heun_integrator_constructor
  integration/rk2_heun/src/rk2_heun_second_order_ode_integrator
  integration/rk2_midpoint/src/rk2_midpoint_first_order_ode_integrator
  integration/rk2_midpoint/src/rk2_midpoint_integrator_constructor
  integration/rk2_midpoint/src/rk2_midpoint_second_order_ode_integrator
  integration/rk4/src/rk4_first_order_ode_integrator
  integration/rk4/src/rk4_integrator_constructor
  integration/rk4/src/rk4_second_order_ode_integrator
  integration/rk4/src/rk4_second_order_ode_integrator_base
  integration/rkf45/src/rkf45_butcher_tableau
  integration/rkf45/src/rkf45_first_order_ode_integrator
  integration/rkf45/src/rkf45_integrator_constructor
  integration/rkf45/src/rkf45_second_order_ode_integrator
  integration/rkf78/src/rkf78_butcher_tableau
  integration/rkf78/src/rkf78_first_order_ode_integrator
  integration/rkf78/src/rkf78_integrator_constructor
  integration/rkf78/src/rkf78_second_order_ode_integrator
  integration/rkg4/src/rkg4_butcher_tableau
  integration/rkg4/src/rkg4_first_order_ode_integrator
  integration/rkg4/src/rkg4_integrator_constructor
  integration/rkg4/src/rkg4_second_order_ode_integrator
  integration/rkn4/src/rkn4_integrator_constructor
  integration/rkn4/src/rkn4_second_order_ode_integrator
  integration/symplectic_euler/src/symplectic_euler_integrator_constructor
  integration/symplectic_euler/src/symplectic_euler_second_order_ode_integrator
  integration/velocity_verlet/src/velocity_verlet_integrator_constructor
  integration/velocity_verlet/src/velocity_verlet_second_order_ode_integrator
  interface/src/alloc
  interface/src/deletable
  interface/src/message_handler
  math/src/n_choose_m
  math/src/ratio128
  math/src/uint128
  trick/integration/src/trick_integrator
)

add_library( er7_utils_objs OBJECT ${ER7_UTILS_SRC} )

